--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^0.9.5",
+    "react-simple-chatbot": "^0.6.1",
     "reactrangeslider": "^3.0.6",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "styled-components": "^4.3.2"
   },
   "devDependencies": {},
   "scripts": {
