login + register+ formulaire added

--- a/package.json
+++ b/package.json
@@ -6,11 +6,17 @@
     "@material-ui/core": "^4.2.1",
     "antd": "^3.20.7",
     "axios": "^0.19.0",
+    "dialogflow": "^0.10.3",
+    "draft-js": "^0.11.0",
     "google-map-react": "^1.1.4",
     "google-maps-react": "^2.0.2",
     "mdbreact": "^4.18.1",
-    "react": "^16.8.6",
+    "pusher": "^2.2.2",
+    "pusher-js": "^5.0.0",
+    "react": "^16.9.0",
     "react-dom": "^16.8.6",
+    "react-draft-wysiwyg": "^1.13.2",
+    "react-dropzone": "^10.1.8",
     "react-md": "^1.12.2",
     "react-next-paging": "^7.0.7",
     "react-pagination-library": "^0.1.14",
@@ -20,8 +26,11 @@
     "react-scripts": "^0.9.5",
     "react-simple-chatbot": "^0.6.1",
     "reactrangeslider": "^3.0.6",
+    "reactstrap": "^8.0.1",
     "redux": "^4.0.4",
-    "styled-components": "^4.3.2"
+    "simple-react-validator": "^1.2.2",
+    "styled-components": "^4.3.2",
+    "superagent": "^5.1.0"
   },
   "devDependencies": {},
   "scripts": {
