--- a/package.json
+++ b/package.json
@@ -3,27 +3,45 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.22",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "@material-ui/core": "^4.2.1",
+    "@material-ui/pickers": "^3.2.5",
+    "@material/select": "^3.1.0",
+    "@syncfusion/ej2-base": "^17.2.49",
+    "@syncfusion/ej2-react-richtexteditor": "^17.2.49",
     "antd": "^3.20.7",
     "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "bootstrap-daterangepicker": "^3.0.5",
     "dialogflow": "^0.10.3",
     "draft-js": "^0.11.0",
     "google-map-react": "^1.1.4",
     "google-maps-react": "^2.0.2",
+    "marked": "^0.7.0",
     "mdbreact": "^4.18.1",
+    "moment": "^2.24.0",
     "pusher": "^2.2.2",
     "pusher-js": "^5.0.0",
+    "rb-datepicker": "0.0.5",
+    "rc-datepicker": "^5.0.14",
     "react": "^16.9.0",
     "react-dom": "^16.8.6",
     "react-draft-wysiwyg": "^1.13.2",
+    "react-dropdown-select": "^3.3.4",
     "react-dropzone": "^10.1.8",
+    "react-images-upload": "^1.2.7",
+    "react-images-uploader": "^1.2.0-rc1",
     "react-md": "^1.12.2",
     "react-next-paging": "^7.0.7",
     "react-pagination-library": "^0.1.14",
+    "react-progress-button": "^5.1.0",
     "react-rangeslider": "^2.2.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^0.9.5",
+    "react-select": "^3.0.4",
+    "react-select-search": "^0.9.6",
     "react-simple-chatbot": "^0.6.1",
     "reactrangeslider": "^3.0.6",
     "reactstrap": "^8.0.1",
